# helios

./: .codespellrc  .deepsource.toml  .env.example  .gitattributes  .gitignore  BENCHMARK_OVERHAUL_SUMMARY.md  Cargo.toml  Dockerfile  LICENSE  README.md  benches.md  config.md  flake.nix  helios.example.toml  rpc.md  rust-toolchain  rustfmt.toml  test_benchmark_debug.sh  test_benchmark_syntax.rs
benches/: README.md  (+15 more)
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/tui/: app.rs  mod.rs  ui.rs
client/: Cargo.toml
client/src/: builder.rs  client.rs  database.rs  errors.rs  lib.rs  node.rs  rpc.rs
common/: Cargo.toml
common/src/: constants.rs  errors.rs  execution_mode.rs  execution_provider.rs  execution_spec.rs  fork_schedule.rs  lib.rs  network_spec.rs  state_cache.rs  types.rs  utils.rs
common/src/config/: types.rs  utils.rs
common/src/consensus/: errors.rs  mod.rs  utils.rs
common/src/consensus/types/: mod.rs  utils.rs
common/src/crypto/: consts.rs  types.rs
common/src/execution/: types.rs
config/: Cargo.toml
config/configs/: goerli.toml  mainnet.toml
config/src/: base.rs  checkpoints.rs  cli.rs  config.rs  lib.rs  networks.rs  types.rs  utils.rs
config/tests/: checkpoints.rs
consensus/: Cargo.toml
consensus-core/: Cargo.toml
consensus-core/src/: consensus_core.rs  errors.rs  lib.rs  proof.rs  utils.rs
consensus-core/src/types/: bls.rs  bytes.rs  mod.rs  primitives.rs  serde_utils.rs  utils.rs
consensus/src/: consensus.rs  database.rs  errors.rs  lib.rs  rpc.rs  types.rs  utils.rs
consensus/src/p2p/: config.rs  mod.rs  p2p_network_interface.rs
consensus/src/p2p/discovery/: enr.rs  mod.rs
consensus/src/rpc/: mock_rpc.rs  mod.rs  nimbus_rpc.rs
consensus/src/types/: mod.rs  primitives.rs  utils.rs
consensus/testdata/: blocks.json  bootstrap.json  finality.json  optimistic.json  updates.json
consensus/testdata/blocks/: 7109344.json  7109431.json
consensus/tests/: sync.rs
core/: Cargo.toml
core/client/: Cargo.toml
core/client/src/: client.rs  errors.rs  lib.rs  rpc.rs
core/common/: Cargo.toml
core/common/src/: errors.rs  network_spec.rs  types.rs
core/execution/: Cargo.toml
core/execution/rpc/: http_rpc.rs
core/execution/rpc/tests/: http_rpc_tests.rs
core/execution/src/: evm.rs  execution.rs  types.rs
core/execution/src/rpc/: http_rpc.rs
core/execution/testdata/: code.json  logs.json
core/execution/tests/: execution.rs
core/src/: auth_forwarding.rs  consensus.rs  errors.rs  fork_schedule.rs  lib.rs  network_spec.rs  time.rs  types.rs
core/src/client/: api.rs  client.rs  errors.rs  mod.rs  node.rs  rpc.rs
core/src/common/: errors.rs
core/src/execution/: constants.rs  errors.rs  evm.rs  execution.rs  filter_state.rs  mod.rs  proof.rs  spec.rs  state.rs  types.rs
core/src/jsonrpc/: mod.rs
core/testdata/: filter_id.txt  storage.txt
core/tests/: execution.rs
ethereum/: Cargo.toml
ethereum/config/src/: base.rs  networks.rs
ethereum/consensus-core/: Cargo.toml
ethereum/consensus-core/src/: consensus_core.rs  consensus_spec.rs  errors.rs  lib.rs  proof.rs  utils.rs
ethereum/consensus-core/testdata/: config.yaml  meta.yaml
ethereum/consensus-core/tests/: consensus_spec_tests.rs  slot_12557247_rpc_test.rs  sync.rs
ethereum/consensus/src/: consensus.rs  constants.rs  database.rs
ethereum/src/: builder.rs  consensus.rs  database.rs  evm.rs  lib.rs  spec.rs
ethereum/src/config/: base.rs  checkpoints.rs  cli.rs  config.rs  mod.rs  networks.rs  types.rs
ethereum/src/rpc/: http_rpc.rs  mock_rpc.rs  mod.rs  nimbus_rpc.rs
ethereum/testdata/: finality.json
ethereum/testdata/blocks/: 7109430.json
ethereum/tests/: checkpoints.rs  sync.rs
execution/: Cargo.toml
execution/src/: blocks.rs  constants.rs  errors.rs  evm.rs  execution.rs  lib.rs  proof.rs  rpc.rs  state.rs  types.rs
execution/src/rpc/: http_rpc.rs  mock_rpc.rs  mod.rs  ws_rpc.rs
execution/testdata/: fee_history.json  proof.json  receipt.json
execution/tests/: execution.rs
helios-ts/: Cargo.toml  README.md  biome.json  index.html  lib.ts  package-lock.json  package.json  run.sh  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vite.config.js  webpack.config.js
helios-ts/docs/: README.md  globals.md
helios-ts/docs/_media/: config.md
helios-ts/docs/classes/: HeliosProvider.md
helios-ts/docs/enumerations/: Network.md
helios-ts/docs/functions/: init.md
helios-ts/docs/type-aliases/: Config.md
helios-ts/example/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.worker.config.js
helios-ts/example/src/: env.d.ts  main.ts
helios-ts/src/: ethereum.rs  lib.rs  linea.rs  mantle.rs  opstack.rs  storage.rs  subscription.rs
linea/: Cargo.toml
linea/src/: builder.rs  config.rs  consensus.rs  historical.rs  lib.rs  spec.rs  types.rs
mantle/: Cargo.toml  TEST_PLAN.md
mantle/src/: builder.rs  config.rs  consensus.rs  evm.rs  lib.rs  spec.rs  types.rs
opstack/: Cargo.toml
opstack/src/: builder.rs  config.rs  consensus.rs  evm.rs  lib.rs  spec.rs  types.rs
opstack/src/server/: mod.rs  poller.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
primitives/src/common/: types.rs  utils.rs
primitives/src/config/: types.rs  utils.rs
primitives/src/consensus/: errors.rs  mod.rs  utils.rs
primitives/src/crypto/: consts.rs  types.rs
primitives/src/execution/: errors.rs
primitives/src/types/: mod.rs  primitives.rs  utils.rs
revm-utils/: Cargo.toml
revm-utils/src/: evm.rs  lib.rs  proof_db.rs  types.rs  utils.rs
tests/test-utils/: Cargo.toml
tests/test-utils/src/: lib.rs
verifiable-api/: Cargo.toml  README.md
verifiable-api/client/: Cargo.toml
verifiable-api/client/src/: api_client.rs  http.rs  lib.rs  mock.rs  verifiable_api.rs
verifiable-api/server/: Cargo.toml  openapi.yaml
verifiable-api/server/src/: handlers.rs  lib.rs  router.rs  server.rs  service.rs  state.rs
verifiable-api/src/: api_client.rs  lib.rs  proof.rs  rpc_client.rs  types.rs
verifiable-api/types/: Cargo.toml
verifiable-api/types/src/: lib.rs
(+202 files in other folders)
