[package]
name = "helios"
version.workspace = true
edition = "2021"
autobenches = false
exclude = ["benches"]

[workspace.package]
version = "0.9.0"

[workspace]
members = [
    "cli",
    "common",
    "core",
    "ethereum",
    "ethereum/consensus-core",
    "opstack",
    "helios-ts",
    "tests/test-utils",        # ToDo(@eshaan7): find a better way to include this
    "verifiable-api/client",
    "verifiable-api/server",
    "verifiable-api/types", "linea", "revm-utils",
]

default-members = ["cli"]

######################################
# Workspace Dependencies
######################################

[workspace.dependencies]
# consensus
ssz_types = "0.11"
ethereum_ssz_derive = "0.9"
ethereum_ssz = "0.9"
tree_hash_derive = "0.10.0"
tree_hash = "0.10.0"
sha2 = "0.9"
bls12_381 = { version = "0.8.0", features = ["experimental"] }

# execution
alloy = { version = "1.0.3", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
    "trie",
] }
op-alloy-rpc-types = "0.18.0"
revm = { version = "22.0.1", default-features = false, features = [
    "std",
    "serde",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }

# async/futures
async-trait = "0.1.57"
futures = "0.3.23"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# io
reqwest = { version = "0.12.4", features = ["json", "gzip", "deflate", "zstd", "brotli", "hickory-dns"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
url = { version = "2.5.2", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"

# misc
eyre = "0.6.8"
hex = "0.4.3"
toml = "0.5.9"
tracing = "0.1.37"
chrono = "0.4.23"
thiserror = "1.0.37"
superstruct = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
zduny-wasm-timer = "0.2.8"
retri = "0.1.0"
typenum = "1.17.0"

######################################
# Top Level Dependencies
######################################

[dependencies]
helios-common = { path = "./common" }
helios-core = { path = "./core" }
helios-ethereum = { path = "./ethereum" }
helios-opstack = { path = "./opstack" }

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
dotenv = "0.15.0"
helios-verifiable-api-server = { path = "verifiable-api/server" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
alloy = { version = "1.0.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
dirs = "5.0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
tracing-test = "0.2.4"
criterion = { version = "0.5.1", features = ["async_tokio", "plotters"] }
plotters = "0.3.4"
tempfile = "3.4.0"
hex = "0.4.3"
pretty_assertions = "1.4.0"
rand = "0.8.5"
serial_test = "3.0"

######################################
# Dependency Patches
######################################

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }

######################################
# Profiles
######################################

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

######################################
# Examples
######################################

[[example]]
name = "checkpoints"
path = "examples/checkpoints.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "config"
path = "examples/config.rs"

[[example]]
name = "call"
path = "examples/call.rs"

######################################
# Benchmarks
######################################

[[bench]]
name = "file_db"
harness = false

[[bench]]
name = "get_balance"
harness = false

[[bench]]
name = "get_code"
harness = false

[[bench]]
name = "sync"
harness = false

######################################
# Integration Tests
######################################

[[test]]
name = "rpc_equivalence"
path = "tests/rpc_equivalence.rs"
