[package]
name = "helios-cli"
version = "0.8.3"
edition = "2021"

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
futures.workspace = true
alloy.workspace = true
figment = { workspace = true, features = ["toml", "env"] }

clap = { workspace = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs.workspace = true
ctrlc.workspace = true
url.workspace = true

# self crates
helios-common.workspace = true
helios-core.workspace = true
helios-ethereum.workspace = true
helios-opstack.workspace = true
