[package]
name = "helios-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
futures.workspace = true
alloy.workspace = true

dirs.workspace = true
ctrlc.workspace = true
url.workspace = true

figment = { workspace = true, features = ["toml", "env"] }
clap = { workspace = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# self crates
helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }
helios-opstack = { path = "../opstack" }
helios-linea = { path = "../linea" }
