[package]
name = "helios-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
futures.workspace = true
alloy = { workspace = true, features = ["trie"] }
figment = { version = "0.10.7", features = ["toml", "env"] }

clap = { version = "4.5.4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dirs = "5.0.1"
ctrlc = "3.2.3"
url = "2.5.0"

# TUI dependencies
ratatui = "0.26.1"
crossterm = "0.27.0"
chrono = "0.4"

# self crates
helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }
helios-opstack = { path = "../opstack" }
helios-linea = { path = "../linea" }
