[package]
name = "client"
version = "0.5.3"
edition = "2021"

[dependencies]
eyre.workspace = true
serde.workspace = true
hex.workspace = true
ssz-rs.workspace = true
ethers.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
zduny-wasm-timer.workspace = true

common = { path = "../common" }
consensus = { path = "../consensus" }
execution = { path = "../execution" }
config = { path = "../config" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { version = "0.15.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
wasm-bindgen-futures = "0.4.33"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
