[package]
name = "client"
version = "0.6.0"
edition = "2021"

[dependencies]
alloy.workspace = true
eyre.workspace = true
serde.workspace = true
hex.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
zduny-wasm-timer.workspace = true

consensus = { path = "../consensus" }
execution = { path = "../execution" }
config = { path = "../config" }
common = { path = "../common" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { version = "0.19.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3.0"
wasm-bindgen-futures = "0.4.33"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }
