[package]
name = "common"
version = "0.5.5"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["rpc-types"] }
eyre.workspace = true
serde.workspace = true
hex.workspace = true
serde_json.workspace = true
superstruct.workspace = true
thiserror.workspace = true
tracing.workspace = true
zduny-wasm-timer.workspace = true
