
[package]
name = "config"
version = "0.4.1"
edition = "2021"

[dependencies]
eyre.workspace = true
serde.workspace = true
hex.workspace = true
ethers.workspace = true
thiserror.workspace = true
log.workspace = true
reqwest.workspace = true
futures.workspace = true
backoff.workspace = true

figment = { version = "0.10.7", features = ["toml", "env"] }
serde_yaml = "0.9.14"
strum = { version = "0.24.1", features = ["derive"] }

common = { path = "../common" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
