[package]
name = "config"
version = "0.6.0"
edition = "2021"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
serde.workspace = true
hex.workspace = true
reqwest.workspace = true
futures.workspace = true
retri.workspace = true

figment = { version = "0.10.7", features = ["toml", "env"] }
serde_yaml = "0.9.14"
strum = { version = "0.26.2", features = ["derive"] }

consensus-core = { path = "../consensus-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
dirs = "5.0.1"
