[package]
version = "0.1.0"
name = "consensus-core"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["consensus", "rpc-types", "ssz", "rlp", "k256"] }
ssz_types = "0.7.0"
ethereum_ssz_derive = "0.6.0"
ethereum_ssz = "0.6.0"
tree_hash_derive = "0.7.0"
tree_hash = "0.7.0"
typenum = "1.17.0"
serde_with = { version = "3.9.0", features = ["hex"] }
eyre.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
superstruct.workspace = true
thiserror.workspace = true
tracing.workspace = true
zduny-wasm-timer.workspace = true
bytes.workspace = true
milagro_bls.workspace = true

common = { path = "../common" }
