[package]
version = "0.1.0"
name = "consensus-core"
edition = "2021"

[dependencies]
alloy = { version = "0.2.1", features = ["consensus", "rpc-types", "ssz", "rlp", "k256"] }
ssz_types.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
tree_hash_derive.workspace = true
tree_hash.workspace = true
typenum.workspace = true
sha2.workspace = true
eyre.workspace = true
serde.workspace = true
superstruct.workspace = true
thiserror.workspace = true
tracing.workspace = true
zduny-wasm-timer.workspace = true
milagro_bls.workspace = true

common = { path = "../common" }
