[package]
name = "consensus"
version = "0.5.2"
edition = "2021"

[dependencies]
# consensus
ssz-rs.workspace = true
milagro_bls.workspace = true

# execution
ethers.workspace = true

# async/futures
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# io
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

#misc
eyre.workspace = true
hex.workspace = true
bytes.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
superstruct.workspace = true
zduny-wasm-timer.workspace = true
retri.workspace = true

common = { path = "../common" }
config = { path = "../config" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2.1", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl.workspace = true

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
