[package]
name = "helios-core"
version.workspace = true
edition = "2021"

[dependencies]
# self crates
helios-common = { path = "../common" }
helios-verifiable-api-client = { path = "../verifiable-api/client" }

# execution
alloy.workspace = true
alloy-trie.workspace = true
revm.workspace = true

# async/futures
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true

# io
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# misc
eyre.workspace = true
hex.workspace = true
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { workspace = true, features = ["full"] }
openssl.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
gloo-timers.workspace = true
wasmtimer.workspace = true

[target.wasm32-unknown-unknown.dependencies]
parking_lot.workspace = true

[dev-dependencies]
helios-test-utils = { path = "../tests/test-utils" }
helios-ethereum = { path = "../ethereum" }
