[package]
name = "helios-ethereum"
version = "0.8.3"
edition = "2021"

[dependencies]
# consensus
alloy-trie.workspace = true
tree_hash.workspace = true
revm.workspace = true

# config
figment = { workspace = true, features = ["toml", "env"] }
serde_yaml.workspace = true
strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }

# async/futures
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# io
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

#misc
alloy.workspace = true
eyre.workspace = true
hex.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
superstruct.workspace = true
retri.workspace = true
typenum.workspace = true

# self crates
helios-common.workspace = true
helios-core.workspace = true
helios-consensus-core.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2.1", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl.workspace = true
dirs = "5.0.1"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }
