[package]
name = "execution"
version = "0.5.5"
edition = "2021"

[dependencies]
# consensus
ssz-rs.workspace = true

# execution
revm.workspace = true
ethers.workspace = true
triehash-ethereum.workspace = true

# async/futures
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true

# io
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# misc
eyre.workspace = true
hex.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
hyper.workspace = true

consensus = { path = "../consensus" }
primitives = { path = "../primitives" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
