[package]
name = "helios-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

anyhow.workspace = true
alloy.workspace = true

hex = "0.4.3"

client = { path = "../client" }
consensus = { path = "../consensus" }
config = { path = "../config" }
common = { path = "../common" }


[dependencies.web-sys]
version = "0.3"
features = ["console", "Storage", "Window"]
