[package]
name = "helios-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true

eyre.workspace = true
alloy.workspace = true
op-alloy-rpc-types.workspace = true

hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# self crates
helios-common.workspace = true
helios-ethereum.workspace = true
helios-opstack.workspace = true
web-sys= { workspace = true, features = ["console", "Storage", "Window"] }
