[package]
name = "helios-ts"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

eyre.workspace = true
alloy.workspace = true
op-alloy-rpc-types.workspace = true

serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
url = "2.5.0"

# self crates
helios-common = { path = "../common" }
helios-ethereum = { path = "../ethereum" }
helios-opstack = { path = "../opstack" }
helios-linea = { path = "../linea" }
helios-mantle = { path = "../mantle" }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Storage", "Window"]
