[package]
name = "helios-linea"
version = "0.8.4"
edition = "2021"

[dependencies]
# config
figment = { version = "0.10.7", features = ["toml", "env"] }

# async/futures
tokio.workspace = true

# io
serde.workspace = true

#misc
alloy.workspace = true
eyre.workspace = true
tracing.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
url = "2.5.0"

helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }