[package]
name = "helios-linea"
version.workspace = true
edition = "2021"

[dependencies]
# config
figment = { workspace = true, features = ["toml", "env"] }

# async/futures
tokio.workspace = true

# io
serde.workspace = true

#misc
alloy.workspace = true
eyre.workspace = true
tracing.workspace = true
strum = { workspace = true, features = ["derive"] }
url.workspace = true

helios-common = { path = "../common" }
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
