[package]
name = "helios-opstack"
version = "0.8.3"
edition = "2021"

[[bin]]
name = "server"
path = "./bin/server.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
hex.workspace = true
serde.workspace = true
typenum.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest.workspace = true
url.workspace = true
futures.workspace = true

# consensus
alloy.workspace = true
alloy-trie.workspace = true
revm.workspace = true
sha2.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
ssz_types.workspace = true
alloy-rlp.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true
snap.workspace = true

# config
figment = { workspace = true, features = ["toml", "env"] }

# self crates
helios-common.workspace = true
helios-core.workspace = true
helios-ethereum.workspace = true
helios-consensus-core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# server
axum = "0.7.6"
clap = { version = "4.5.4", features = ["derive", "env"] }
# networking
libp2p = { version = "0.51.3", features = ["macros", "tokio", "tcp", "mplex", "noise", "gossipsub", "ping"] }
discv5 = "0.7.0"
libp2p-identity = { version = "0.1.2", features = ["secp256k1"] }
unsigned-varint = "0.7.1"

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.12.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2.1", features = ["js"] }
